# QWIM

./: .gitignore  CMakeLists.txt  README.md  ThisTask.md  test.sh  test_timeout.py  test_timeout.sh  test_timeout2.py
.cache/clangd/index/: Server.cpp.52E8C381C6438CE1.idx  Server.h.9595DEBFFF0E7C73.idx  client.cpp.C3225EF9BD810838.idx  client.cpp.E3D8F2DF1E4C4DB3.idx  json.hpp.D8234F0BB1E84D3F.idx  json.hpp.DD8BD28B7176318C.idx  main.cpp.FDF63B348CB2AFDE.idx  server.cpp.AC1F222B46F7DACF.idx
client/: CMakeLists.txt  Client_API_Report.md  client.cpp
client/src/: main.cpp
client/src/config/: app_config.cpp  app_config.h
client/src/core/: app_core.cpp  app_core.h
client/src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
client/src/models/: net_message.cpp  net_message.h  user_model.cpp  user_model.h
client/src/network/: network_manager.cpp  network_manager.h
client/src/utils/: logger.cpp  logger.h
config/: server.conf
docs/: Logging.md
server/: CMakeLists.txt  TODO.md  main.cpp
server/include/: Server.h
server/src/: Server.cpp
server/src/base/: Config.cpp  JwtUtils.cpp  JwtUtils.h
server/src/db/: MessageModel.cpp  MessageModel.h  MySQLPool.cpp  MySQLPool.h  UserModel.cpp  UserModel.h
server/src/log/: AsyncLogger.cpp  AsyncLogger.h  LogStream.cpp  Logger.h
server/src/minicl/: minicl.cpp
server/src/net/: Connection.cpp  Connection.h  EventLoop.cpp  EventLoopThreadPool.cpp  EventLoopThreadPool.h  TimerManager.h
server/src/server/: ChatService.cpp  ChatService.h  IMServer.cpp  main.cpp
server/stress_test/: README.md  run.sh
src/: AsyncLogger.cpp  Buffer.h  Channel.cpp  Channel.h  ChatService.cpp  ChatService.h  Config.h  Connection.cpp  Connection.h  EventLoop.h  EventLoopThread.cpp  EventLoopThread.h  IMServer.cpp  IMServer.h  LogStream.h  Logger.cpp  Router.cpp  Router.h  TimerManager.cpp  TimerManager.h  client.cpp  main.cpp  server.cpp  stress_tester.cpp
stress_test/: CMakeLists.txt  stress_report.txt  stress_tester.cpp
